--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       img.onload = () => {
         canvas.width = img.width;
         canvas.height = img.height;
-        ctx.drawImage(img, 0, 0);
+        ctx.drawImage(img, 0, 0); // Preview only, does not affect PDF
       };
     }
 
@@ -522,15 +522,27 @@
             throw new Error('jsPDF library not loaded');
           }
 
-          if (state.imageData) {
-            // Scanned or uploaded image: convert to PDF
+          if (state.imageData && state.file === 'scanned_image.pdf') {
+            // Captured image: use full size
+            const img = new Image();
+            img.src = state.imageData; // Raw captured image, no UI
+            await new Promise((resolve) => { img.onload = resolve; });
+            const pdf = new jsPDF({
+              orientation: 'portrait',
+              unit: 'mm',
+              format: [img.height / 3.78, img.width / 3.78] // Convert pixels to mm (96 DPI)
+            });
+            pdf.addImage(state.imageData, 'PNG', 0, 0, img.width / 3.78, img.height / 3.78); // Full size
+            pdfDataUrl = pdf.output('datauristring');
+          } else if (state.imageData || state.fileData?.startsWith('data:image')) {
+            // Uploaded image: scale to A4
             const pdf = new jsPDF({
               orientation: 'portrait',
               unit: 'mm',
               format: 'a4'
             });
             const img = new Image();
-            img.src = state.imageData;
+            img.src = state.imageData || state.fileData;
             await new Promise((resolve) => { img.onload = resolve; });
             const pdfWidth = pdf.internal.pageSize.getWidth();
             const pdfHeight = pdf.internal.pageSize.getHeight();
@@ -541,7 +553,7 @@
             const scaledHeight = imgHeight * ratio;
             const x = (pdfWidth - scaledWidth) / 2;
             const y = (pdfHeight - scaledHeight) / 2;
-            pdf.addImage(state.imageData, 'PNG', x, y, scaledWidth, scaledHeight);
+            pdf.addImage(state.imageData || state.fileData, 'PNG', x, y, scaledWidth, scaledHeight);
             pdfDataUrl = pdf.output('datauristring');
           } else if (state.fileData?.startsWith('data:application/pdf')) {
             // Uploaded PDF: use directly
