--- a/index.html
+++ b/index.html
@@ -25,9 +25,29 @@
       max-width: 420px;
       text-align: center;
       transition: transform 0.3s ease;
+      display: none; /* Hidden during capture-preview */
     }
-    .container:hover {
-      transform: translateY(-2px);
+    .container.active {
+      display: flex;
+    }
+    #capture-preview {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    #capture-preview.active {
+      display: flex;
+    }
+    #capture-canvas {
+      max-width: 100%;
+      max-height: 100%;
     }
     h1 {
       font-size: 1.75rem;
@@ -182,6 +202,10 @@
 </head>
 <body>
   <div id="app" class="container"></div>
+  <div id="capture-preview">
+    <canvas id="capture-canvas"></canvas>
+    <button class="btn-green" onclick="proceedToOptions()" aria-label="Proceed to Options">Proceed</button>
+  </div>
   <iframe id="print-iframe"></iframe>
   <script>
     // Pricing constants in ZAR
@@ -213,10 +237,13 @@
     function render() {
       console.log('Rendering screen:', state.screen);
       const app = document.getElementById('app');
-      if (!app) {
-        console.error('App container not found');
+      const capturePreview = document.getElementById('capture-preview');
+      if (!app || !capturePreview) {
+        console.error('App or capture-preview container not found');
         return;
       }
+      app.classList.toggle('active', state.screen !== 'capture-preview');
+      capturePreview.classList.toggle('active', state.screen === 'capture-preview');
       app.innerHTML = '';
       if (state.screen === 'menu') {
         app.innerHTML = `
@@ -234,7 +261,7 @@
               <div class="form-group">
                 <label>Camera Preview:</label>
                 <video id="video" autoplay playsinline></video>
-                <p>Please position the camera to capture only the document, avoiding screen reflection.</p>
+                <p>Please position the camera to capture only the document.</p>
                 <div class="flex">
                   <button class="btn-blue" onclick="captureImage()" aria-label="Capture Image">Capture</button>
                   <button class="btn-gray" onclick="stopCamera()" aria-label="Stop Camera">Cancel</button>
@@ -296,9 +323,22 @@
             </div>
           ` : ''}
         `;
+        if (state.screen === 'capture-preview') {
+          const canvas = document.getElementById('capture-canvas');
+          if (canvas && state.imageData) {
+            const ctx = canvas.getContext('2d');
+            const img = new Image();
+            img.src = state.imageData;
+            img.onload = () => {
+              canvas.width = img.width;
+              canvas.height = img.height;
+              ctx.drawImage(img, 0, 0);
+            };
+          }
+        }
         if (state.service === 'print' && state.scanMode) {
           startVideoStream();
-        } else if (state.service === 'print' && state.imageData) {
+        } else if (state.service === 'print' && state.imageData && state.screen === 'options') {
           drawCanvas();
         }
       } else if (state.screen === 'summary') {
@@ -394,9 +434,11 @@
       const ctx = canvas.getContext('2d');
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
       state.imageData = canvas.toDataURL('image/png');
-      console.log('Captured Image Data:', state.imageData.substring(0, 50) + '...'); // Verify raw image
+      console.log('Captured Image Data:', state.imageData.substring(0, 50) + '...');
       state.file = 'scanned_image.pdf';
       state.fileUploaded = true;
+      state.scanMode = false;
+      state.screen = 'capture-preview'; // Switch to preview-only screen
       stopCamera();
       render();
     }
@@ -413,8 +455,13 @@
       img.onload = () => {
         canvas.width = img.width;
         canvas.height = img.height;
-        ctx.drawImage(img, 0, 0); // Preview only
+        ctx.drawImage(img, 0, 0);
       };
+    }
+
+    function proceedToOptions() {
+      state.screen = 'options';
+      render();
     }
 
     // File handling
@@ -437,7 +484,7 @@
       reader.onload = () => {
         state.fileData = reader.result;
         if (file.type.startsWith('image/')) {
-          state.imageData = state.fileData; // For preview
+          state.imageData = state.fileData;
         }
         console.log('File loaded:', state.file);
         render();
@@ -454,10 +501,6 @@
       state.screen = screen;
       state.error = '';
       state.scanMode = false;
-      state.imageData = null;
-      state.file = null;
-      state.fileUploaded = false;
-      state.fileData = null;
       state.isPrinting = false;
       if (videoStream) {
         videoStream.getTracks().forEach(track => track.stop());
@@ -525,19 +568,17 @@
           }
 
           if (state.imageData && state.file === 'scanned_image.pdf') {
-            // Captured image: use full size, only the captured image
             const img = new Image();
-            img.src = state.imageData; // Raw capture, no UI
+            img.src = state.imageData; // Isolated capture
             await new Promise((resolve) => { img.onload = resolve; });
             const pdf = new jsPDF({
               orientation: 'portrait',
               unit: 'mm',
-              format: [img.height / 3.78, img.width / 3.78] // 96 DPI conversion
+              format: [img.height / 3.78, img.width / 3.78] // 96 DPI
             });
-            pdf.addImage(state.imageData, 'PNG', 0, 0, img.width / 3.78, img.height / 3.78); // Full size
+            pdf.addImage(state.imageData, 'PNG', 0, 0, img.width / 3.78, img.height / 3.78);
             pdfDataUrl = pdf.output('datauristring');
           } else if (state.imageData || state.fileData?.startsWith('data:image')) {
-            // Uploaded image: scale to A4
             const pdf = new jsPDF({
               orientation: 'portrait',
               unit: 'mm',
@@ -558,13 +599,11 @@
             pdf.addImage(state.imageData || state.fileData, 'PNG', x, y, scaledWidth, scaledHeight);
             pdfDataUrl = pdf.output('datauristring');
           } else if (state.fileData?.startsWith('data:application/pdf')) {
-            // Uploaded PDF: use directly
             pdfDataUrl = state.fileData;
           } else {
             throw new Error('Unsupported file type for printing');
           }
 
-          // Check printer availability (simulated)
           const testPrint = document.createElement('iframe');
           testPrint.style.display = 'none';
           document.body.appendChild(testPrint);
@@ -573,7 +612,7 @@
             testPrint.contentWindow.document.write('<p>Test</p>');
             testPrint.contentWindow.focus();
             testPrint.contentWindow.print();
-            hasPrinters = true; // Assume success if no exception
+            hasPrinters = true;
           } catch (e) {
             console.warn('No printers detected:', e);
           } finally {
@@ -584,7 +623,6 @@
             throw new Error('No printers found. Please connect a printer and try again.');
           }
 
-          // Load PDF in iframe and trigger print
           const iframe = document.getElementById('print-iframe');
           iframe.src = pdfDataUrl;
           iframe.onload = () => {
@@ -642,6 +680,14 @@
       const existingAlert = document.querySelector('.alert-overlay');
       if (existingAlert) existingAlert.remove();
       document.getElementById('print-iframe').src = '';
+      render();
+    }
+
+    function resetFile() {
+      state.file = null;
+      state.fileUploaded = false;
+      state.imageData = null;
+      state.fileData = null;
       render();
     }
 
